--- a/gk2019/Lightning/Properties/Resources.resx
+++ b/gk2019/Lightning/Properties/Resources.resx
@@ -130,4 +130,10 @@
   <data name="normal_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\normal_3.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="normal_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\normal_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="normal_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\normal_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
